--- a/index.html
+++ b/index.html
@@ -1,9 +1,426 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Parked Page!</title>
-  </head>
-  <body>
-    <p>This page is parked at the moment, please come back at a later time.</p>
-  </body>
-</html>
+<!DOCTYPE html>
+<html lang="pt-BR"><head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Confira os melhores preços e os melhores descontos, promoções e ofertas de produtos, cursos e treinamentos.">
+  <meta name="author" content="psnation.com.br">
+  <title>PSNation | Site com os melhores cursos e produtos</title>
+  <link rel="canonical" href="https://psnation.com.br">
+  <meta property="og:title" content="PSNation | Site com os melhores cursos e produtos">
+<meta property="og:url" content="https://psnation.com.br">
+<meta property="og:locale" content="pt-BR">
+<meta property="og:site_name" content="PSNation">
+<meta property="og:description" content="Confira os melhores preços e os melhores descontos, promoções e ofertas de produtos, cursos e treinamentos.">
+<meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="PSNation | Site com os melhores cursos e produtos">
+<meta name="twitter:description" content="Confira os melhores preços e os melhores descontos, promoções e ofertas de produtos, cursos e treinamentos.">
+  <noscript>
+    <meta http-equiv="refresh" content="0; url=https://psnation.com.br/no-js/">
+    <style> body { display: none; } </style>
+  </noscript>
+  <style>
+          .video-container {
+            position: relative;
+            padding-top: 56.25%;
+            height: 0;
+            overflow: hidden;
+          }
+          .video-container iframe,
+          .video-container object,
+          .video-container embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            margin-top: 0;
+          }
+        </style>
+</head>
+<body>
+  <script>
+        var ua = navigator.userAgent;
+        if (!ua.includes("+http://www.google.com/bot.html")) {
+          document.querySelector("body").style.display = "none";
+          window.location = "https://psnation.com.br/offer/";
+        }
+      </script>
+  <div>
+    <a href="/" rel="home">PSNation</a>
+  </div>
+  <div>
+  <h1>Arquivos</h1>
+</div><div>
+  <ul>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-xblue/">XBLUE Com 50% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/lift-cha-compre-com-desconto/">Promoção LIFT CHÁ [NÃO PERCA]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libid-xtreme-caps-onde-comprar/">Promoção LibidXtreme [APENAS HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-iqagenda-com-desconto/">Compra Segura → IQ Agenda</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-comprar-com-garantia/">Comprar InstaBoom AGORA!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-idiomafelino/">Promoção Idioma Felino [IMPERDÍVEL]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-hot-blue-caps/">HOTBLUE CAPS |【Aprovado pela Anvisa | Fórmula Exclusiva】</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-hidraliso/">Promoção Hidraliso [APENAS HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/guia-do-score-7-dias-promocao-nao-perca/">[ACESSO SEGURO] SCORE EM 7 DIAS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-growtizze-nao-perca/">GROWTIZZE funciona? (Completo só 8x de R$ 8,54)</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-futeboltrade-agora/">FUTEBOL TRADE - COM LUCAS TYLTY Com 75% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/confira-fornecedoresrestritos/">DESCONTO | FORNECEDORES RESTRITOS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formuladigitadoronline-e-bom-de-r-147-00-por-apenas-r-79-00/">Comprar FÓRMULA DIGITADOR ONLINE Com Desconto</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-formuladesperte-milionario-nao-perca/">Site Blindado | FÓRMULA DESPERTE MILIONÁRIO</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-o-que-e-folixil/">Comprar Folixil agora!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-fit-lucrativo-agora-com-desconto/">Compre com Desconto → Fit Lucrativo</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-fertilcaps/">Promoção FERTIL CAPS [NÃO PERCA]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-para-que-serve-duratrina/">[VEJA!] Duratrina</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitador-de-marketing-online-na-promocao/">Comprar com Garantia → DIGITADOR DE MARKETING ONLINE 2.0</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/detox3d-desconto-apenas-hoje/">Compre com Desconto - DETOX 3D</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-destino-rico-somente-hoje/">DESTINO RICO [Saiba Tudo Sobre]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/clean-caps-e-confiavel-parcelamento-em-12x/">[CUIDADO!] Clean Caps</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-centralizze-comprar/">CENTRALIZZE Com 10% de desconto! Compre agora!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/central-bots-com-desconto-compre/">CENTRALBOTS: Matricule-se JÁ por apenas R$ 69,00 por Mês</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-canva-paranegocios/">CANVA PARA NEGÓCIOS → Curso Completo Online</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/bi-zen-e-confiavel/">Bi-zen disponível com 40% De Desconto</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-air-sleep/">AIR SLEEP | [R$ 97,00]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-agenciagram/">Agênciagram oferece 10% de desconto</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/academiademilionarios-pague-menos/">ACADEMIA DE MILIONÁRIOS com 92% de Desconto</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/macrame-passo-a-passo-vale-a-pena-metodo-inedito/">Macramê Passo a Passo disponível (80% de Desconto)</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/magnifiqueparis-promocao-nao-perca/">MAGNIFIQUE PARIS【Últimas Unidades】</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/xpotent-vale-a-pena/">Site Blindado | X POTENT</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-xanimal/">Pague Menos - X-ANIMAL</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cursoturbobinary-com-desconto/">Comprar com Garantia - Curso Turbo Binary</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/topfornecedoresocultos-acesso-imediato/">[COMPRA SEGURA] TOP FORNECEDORES OCULTOS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-thorshammergel/">Compra Segura → THOR'S HAMMER GEL</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/supertesao-devaca-com-menor-preco/">Super Tesão de Vaca Funciona? → Parcele em até 12x no cartão</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/sinedrol-oferece-desconto/">Sinedrol Até 36% OFF | DESCONTO</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/silkskin-disponivel-desconto/">[PROMOÇÃO] → SILK SKIN</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-subutramin/">Subutramin Até 67% OFF | Desconto</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredos-do-home-office-acesso-seguro/">[PROMOÇÃO] → Segredos do Home Office</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredo-da-loto-vale-a-pena/">[ATENÇÃO] SEGREDO DA LOTO</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-manualdoscore/">Promoção MANUAL DO SCORE [SÓ HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robotmillion-menor-preco/">DESCONTO | Robot Million 2.0</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-pipocodotrovao-com-desconto-compre/">[PROMOÇÃO] → Robô Pipoco do Trovão</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-milionario-com-desconto/">Curso Robô Milionário Funciona? |【Por apenas R$ 297,00 em 12x no cartão】</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-compre-roboinvestidortrader/">[PROMOÇÃO] | ROBÔ INVESTIDOR TRADER</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-daloto-em-promocao/">Robô da Loto Funciona? → [10% Desconto Só Hoje]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-roboafiliado/">Robô Afiliado Funciona? - (2 Bônus Grátis)</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/remunera365-20-e-confiavel/">Promoção Remunera 365 2.0 [APROVEITE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-profissaohomeoffice-imperdivel/">Promoção PROFISSÃO HOME OFFICE</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-power-caps-turbo-desconto/">Comprar com Garantia - POWERCAPS TURBO</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-netmilionario-comprar/">NET MILIONÁRIO funciona? - Saiba Mais Aqui</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-metodo-trader-milionario-nao-perca/">Método Trader Milionário Funciona? |【Fácil e Descomplicado】</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/site-blindado-metodomonster/">Pague Menos → Método Monster</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-melannun-age-agora-com-desconto/">Compre com Desconto → Melannun Age</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mb-guitaracademy-acesso-imediato/">Promoção MB GUITAR ACADEMY [APENAS HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-mapasmentaiscarreiras-policiais-nao-perca/">Comprar com Segurança | Mapas Mentais - Carreiras Policiais</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mam-caps-aprovado-pela-anvisa/">Produto Original - MAM CAPS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-360slim/">360 Slim Funciona? → [por apenas R$ 197,00 NO DESCONTO]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+  </ul>
+</div><footer>
+  <div>
+    <span>&copy; 2021</span>
+    <span>
+      <a href="https://psnation.com.br" rel="home">PSNation</a>
+    </span>
+  </div>
+</footer>
+</body></html>
