--- a/index.html
+++ b/index.html
@@ -56,73 +56,367 @@
   <ul>
     <li>
       <h2>
-        <a href="/compre-com-desconto-xblue/">XBLUE Com 50% de desconto! COMPRE AGORA!</a>
+        <a href="/o-que-e-xblue/">Promoção XBLUE</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/lift-cha-compre-com-desconto/">Promoção LIFT CHÁ [NÃO PERCA]</a>
+        <a href="/lift-cha-onde-comprar-para-que-serve/">LIFT CHÁ disponível (50% de desconto)</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/libid-xtreme-caps-onde-comprar/">Promoção LibidXtreme [APENAS HOJE]</a>
+        <a href="/desconto-libidxtreme/">[ATENÇÃO!] LIBID XTREME CAPS</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-iqagenda-com-desconto/">Compra Segura → IQ Agenda</a>
+        <a href="/comprar-com-seguranca-iqagenda/">IQ AGENDA funciona? → [Melhor Curso de 2021 Apenas R$ 197,00/Mês]</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/instaboom-comprar-com-garantia/">Comprar InstaBoom AGORA!</a>
+        <a href="/instaboom-desconto/">InstaBoom Até 10% OFF - Desconto</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/compre-com-garantia-idiomafelino/">Promoção Idioma Felino [IMPERDÍVEL]</a>
+        <a href="/comprar-idiomafelino-com-desconto/">IDIOMA FELINO funciona? (Versão 2021)</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/desconto-compre-hot-blue-caps/">HOTBLUE CAPS |【Aprovado pela Anvisa | Fórmula Exclusiva】</a>
+        <a href="/hot-blue-caps-produto-original/">Como funciona o HotBlue Caps?</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/compre-com-desconto-hidraliso/">Promoção Hidraliso [APENAS HOJE]</a>
+        <a href="/hidraliso-compre-agora-o-seu/">Hidraliso - Alisante de Chuveiro funciona? | Produto 100% Natural</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/guia-do-score-7-dias-promocao-nao-perca/">[ACESSO SEGURO] SCORE EM 7 DIAS</a>
+        <a href="/desconto-comprar-guiadoscore-7dias/">GUIA DO SCORE 7 DIAS Funciona? -【Cursos Profissionalizantes】</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/promocao-growtizze-nao-perca/">GROWTIZZE funciona? (Completo só 8x de R$ 8,54)</a>
+        <a href="/promocao-growtizze-so-hoje/">GROWTIZZE em Promoção</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/comprar-futeboltrade-agora/">FUTEBOL TRADE - COM LUCAS TYLTY Com 75% de desconto! COMPRE AGORA!</a>
+        <a href="/promocao-futebol-trade-somente-hoje/">Comprar com Garantia → FUTEBOL TRADE</a>
       </h2>
-      <p>17/08/2021</p>
+      <p>18/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/confira-fornecedoresrestritos/">DESCONTO | FORNECEDORES RESTRITOS</a>
+        <a href="/comprar-com-garantia-fornecedores-restritos/">Fornecedores Restritos Funciona? - [Acesse o Site]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-formula-digitadoronline-aproveite/">FÓRMULA DIGITADOR ONLINE |【Matricule-se hoje com 47% Off】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/formuladespertemilionario-inscricoes-abertas/">Comprar com Segurança | FÓRMULA DESPERTE MILIONÁRIO</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/folixil-promocao-imperdivel/">FOLIXIL funciona? | PRODUTO ORIGINAL | Nova Fórmula Revolucionária</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-fitlucrativo/">FIT Lucrativo oferece 10% De Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-fertil-caps/">Fertil Caps | [Nova Fórmula Exclusiva]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/duratrina-adquira-agora-o-seu/">Duratrina Funciona? → [De R$ 299,00 Por apenas R$ 189,00 COM DESCONTO]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/digitadordemarketingonline-compre-com-garantia/">DIGITADOR DE MARKETING ONLINE Funciona? - (Curso à Distância)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/detox3d-comprar-com-garantia/">DETOX 3D Com Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/cursodestinorico-oferece-desconto/">DESTINO RICO |【3 Bônus Inclusos】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/veja-cleancaps/">[ACESSE] CLEAN CAPS</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-centralizze/">[PROMOÇÃO] → CENTRALIZZE</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-comprar-central-bots/">Central Bots Até 10% OFF - Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-canvaparanegocios/">Comprar Canva para Negócios com Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-bizen-aproveite/">Bi-zen com 40% de desconto! Compre agora!</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-air-sleep-somente-hoje/">AIR SLEEP funciona? | (Confira Aqui)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/agenciagram-e-confiavel-guia-definitivo-por-apenas-r-29-00-ao-mes/">Promoção Agênciagram [APENAS HOJE]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-academiademilionarios-nao-perca/">Academia de Milionários Funciona? -【Bônus Gratuito】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/360slim-compre-agora-o-seu/">360Slim funciona? | Saiba Tudo!</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/macramepassoapasso-com-menor-preco/">[ACESSO SEGURO] MACRAMÊ PASSO A PASSO</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-seguro-magnifiqueparis/">MAGNIFIQUE PARIS | (Dicas e Detalhes)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/adquira-o-seu-xpotent/">X POTENT | [Pague Menos]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/x-animal-comprar-com-garantia/">X-Animal oferece 60% de Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/curso-turbobinary-acesso-imediato/">CURSO TURBO BINARY Até 50% OFF - DESCONTO</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-top-fornecedores-ocultos-compre/">Top Fornecedores Ocultos Com 58% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/thors-hammer-gel-vale-a-pena/">Adquira agora o seu Thor Hammer Gel</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-supertesaodevaca-compre/">Pague Menos - SUPER TESÃO DE VACA</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/sinedrol-desconto/">SINEDROL Com Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/silk-skin-na-promocao/">Compre com Desconto - SILK SKIN</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/onde-comprar-o-que-e-subutramin/">SIBUTRAMIN com 67% De Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/acesso-imediato-segredos-do-homeoffice/">Promoção SEGREDOS DO HOME OFFICE [IMPERDÍVEL]</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/segredo=daloto-e-bom-metodologia-completa/">SEGREDO DA LOTO Funciona? (Guia Prático)</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/como-funciona-o-manualdoscore/">Comprar MANUAL DO SCORE com Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robot-million-vale-a-pena/">Comprar Robot Million 2.0 com Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robopipocodotrovao-em-promocao/">Robô Pipoco do Trovão Funciona? |【Treinamento Completo】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-garantia-curso-robo-milionario/">Robô Milionário Com 10% de desconto! Compre agora!</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-mamcaps-compre/">Mam Caps oferece 10% de Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-mapasmentais-carreiraspoliciais-so-hoje/">DESCONTO - MAPAS MENTAIS - CARREIRAS POLICIAIS</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/mbguitaracademy-essencial-desconto/">[VEJA!] MB GUITAR ACADEMY</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-melannun-age/">Site Blindado → Melannun Age</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/metodomonster-compre-com-desconto/">[ACESSO SEGURO] MÉTODO MONSTER</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/atencao-metodo-trader-milionario/">MÉTODO TRADER MILIONÁRIO funciona? |【90% Desconto em Até 12x】</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-com-seguranca-netmilionario/">[CUIDADO!] Net Milionário</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/powercapsturbo-oferece-desconto/">[ATENÇÃO] POWERCAPS TURBO</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/profissao-homeoffice-funciona-aprenda-com-esse-metodo-inedito/">Profissão Home Office Até 10% OFF | DESCONTO</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/garantia-remunera365-compre/">REMUNERA 365 2.0 oferece 10% De Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/robo-afiliado-compra-segura/">Como funciona o ROBÔ AFILIADO?</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/conheca-o-roboda-loto/">[ACESSE!] Robô da Loto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-robo-investidor-trader-agora-com-desconto/">ROBÔ INVESTIDOR TRADER Até 70% OFF | Desconto</a>
+      </h2>
+      <p>18/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-formuladesperte-milionario-nao-perca/">Site Blindado | FÓRMULA DESPERTE MILIONÁRIO</a>
       </h2>
       <p>17/08/2021</p>
     </li>
@@ -134,7 +428,73 @@
     </li>
     <li>
       <h2>
-        <a href="/promocao-formuladesperte-milionario-nao-perca/">Site Blindado | FÓRMULA DESPERTE MILIONÁRIO</a>
+        <a href="/confira-fornecedoresrestritos/">DESCONTO | FORNECEDORES RESTRITOS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-futeboltrade-agora/">FUTEBOL TRADE - COM LUCAS TYLTY Com 75% de desconto! COMPRE AGORA!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/promocao-growtizze-nao-perca/">GROWTIZZE funciona? (Completo só 8x de R$ 8,54)</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/guia-do-score-7-dias-promocao-nao-perca/">[ACESSO SEGURO] SCORE EM 7 DIAS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-hidraliso/">Promoção Hidraliso [APENAS HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/desconto-compre-hot-blue-caps/">HOTBLUE CAPS |【Aprovado pela Anvisa | Fórmula Exclusiva】</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-garantia-idiomafelino/">Promoção Idioma Felino [IMPERDÍVEL]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/instaboom-comprar-com-garantia/">Comprar InstaBoom AGORA!</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/comprar-iqagenda-com-desconto/">Compra Segura → IQ Agenda</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/libid-xtreme-caps-onde-comprar/">Promoção LibidXtreme [APENAS HOJE]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/lift-cha-compre-com-desconto/">Promoção LIFT CHÁ [NÃO PERCA]</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/macrame-passo-a-passo-vale-a-pena-metodo-inedito/">Macramê Passo a Passo disponível (80% de Desconto)</a>
       </h2>
       <p>17/08/2021</p>
     </li>
@@ -230,13 +590,19 @@
     </li>
     <li>
       <h2>
-        <a href="/macrame-passo-a-passo-vale-a-pena-metodo-inedito/">Macramê Passo a Passo disponível (80% de Desconto)</a>
+        <a href="/magnifiqueparis-promocao-nao-perca/">MAGNIFIQUE PARIS【Últimas Unidades】</a>
       </h2>
       <p>17/08/2021</p>
     </li>
     <li>
       <h2>
-        <a href="/magnifiqueparis-promocao-nao-perca/">MAGNIFIQUE PARIS【Últimas Unidades】</a>
+        <a href="/mam-caps-aprovado-pela-anvisa/">Produto Original - MAM CAPS</a>
+      </h2>
+      <p>17/08/2021</p>
+    </li>
+    <li>
+      <h2>
+        <a href="/compre-com-desconto-xblue/">XBLUE Com 50% de desconto! COMPRE AGORA!</a>
       </h2>
       <p>17/08/2021</p>
     </li>
@@ -399,12 +765,6 @@
     <li>
       <h2>
         <a href="/promocao-mapasmentaiscarreiras-policiais-nao-perca/">Comprar com Segurança | Mapas Mentais - Carreiras Policiais</a>
-      </h2>
-      <p>17/08/2021</p>
-    </li>
-    <li>
-      <h2>
-        <a href="/mam-caps-aprovado-pela-anvisa/">Produto Original - MAM CAPS</a>
       </h2>
       <p>17/08/2021</p>
     </li>
